--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,7 @@ repos:
     rev: v4.0.1
     hooks:
       - id: check-added-large-files
+        exclude: '\.(blend)$'
       - id: check-case-conflict
       - id: check-yaml
       - id: end-of-file-fixer
