--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -3,7 +3,6 @@
 name="html"
 platform="Web"
 runnable=true
-advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
@@ -11,6 +10,11 @@ include_filter=""
 exclude_filter=""
 export_path="./index.html"
 patches=PackedStringArray()
+patch_delta_encoding=false
+patch_delta_compression_level_zstd=19
+patch_delta_min_reduction=0.1
+patch_delta_include_filters="*"
+patch_delta_exclude_filters=""
 encryption_include_filters=""
 encryption_exclude_filters=""
 seed=0
@@ -22,7 +26,7 @@ script_export_mode=2
 
 custom_template/debug=""
 custom_template/release=""
-variant/extensions_support=false
+variant/extensions_support=true
 variant/thread_support=false
 vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=false
@@ -49,7 +53,6 @@ threads/godot_pool_size=4
 name="windows"
 platform="Windows Desktop"
 runnable=true
-advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
@@ -57,6 +60,11 @@ include_filter=""
 exclude_filter=""
 export_path="nautilus.exe"
 patches=PackedStringArray()
+patch_delta_encoding=false
+patch_delta_compression_level_zstd=19
+patch_delta_min_reduction=0.1
+patch_delta_include_filters="*"
+patch_delta_exclude_filters=""
 encryption_include_filters=""
 encryption_exclude_filters=""
 seed=0
